2005-09-15  Nick Roberts  <nickrob@snap.net.nz>

	* bindings.el (mode-line-eol-desc, mode-line-coding-system-map)
	(mode-line-mule-info, mode-line-modified): Move bindings from
	mouse-3 to mouse-1.

2005-09-15  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (sendmail-user-agent-compose): Revert last change.

2005-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/ange-ftp.el (ange-ftp-process-filter): Revert to ^#+$.
	Use with-current-buffer.
	(ange-ftp-gwp-start): Remove unused var `gw-user'.
	(ange-ftp-guess-hash-mark-size): Remove unused var `result'.
	(ange-ftp-insert-directory): Remove unused var `short'.
	(ange-ftp-file-name-sans-versions): Remove unused var `host-type'.

	* pcvs-defs.el (cvs-version): Recognize CVSNT version string.
	(cvs-execute-single-dir): Change default: cvs-1.9 is ancient.

	* calendar/cal-menu.el: Don't require easymenu, since we don't use it.
	(check-calendar-holidays, diary-list-entries): Autoload.
	Otherwise `emacs -q' followed by "mouse-2 -> diary entries" burps.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries): Simplify.

	* calendar/diary-lib.el (diary-show-all-entries): Fix last change,
	which mistakenly removed a call to display-buffer.

2005-09-14  Juanma Barranquero  <lekktu@gmail.com>

	* obsolete/iso-insert.el: Move to obsolete/ from international/.

2005-09-14  Thien-Thi Nguyen  <ttn@gnu.org>

	* progmodes/hideshow.el
	(hs-hide-comments-when-hiding-all): Remove autoload cookie.
	(hs-allow-nesting): New user var.
	(hs-discard-overlays): Skip "internal" overlays if nesting allowed.
	(hs-hide-block-at-point): When nesting allowed,
	if there is already an overlay in place, delete it.
	(hs-safety-is-job-n): Delete func; remove call sites.
	(hs-hide-level-recursive): Don't pre-clean if nesting allowed.
	(hs-overlay-at): New func.
	(hs-already-hidden-p, hs-show-block): Use it.
	(hs-hide-all): Don't pre-clean if nesting allowed.
	(hs-show-all): Temporarily disallow